@@ -15,6 +15,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - networking fixes for HPUX, fixes pbs_iff (PACCAR)
   e - allow long job names when not using -N
   c - using depend=syncwith crashed pbs_server
+  c - races with down nodes and purging jobs crashed pbs_server
 
 2.1.2
 
